# peclet-core

./: .clang-format  .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
benchmarks/: CMakeLists.txt  bench_amr_flow.cpp  bench_halo.cpp
docs/: Doxyfile  amr_collocated_projection.md  amr_device_assembly_plan.md  cuda-aware-mpi.md
include/peclet/core/amr/: adapt.hpp  advect_recon.hpp  assembly.hpp  barnes_hut.hpp  block_octree.hpp  block_octree_view.hpp  csr.hpp  cut_cell.hpp  device_assembly.hpp  device_facegeom_assembly.hpp  device_momentum_assembly.hpp  distributed_adapt.hpp  distributed_device.hpp  distributed_fv.hpp  distributed_octree.hpp  distributed_poisson.hpp  distributed_view.hpp  face_csr.hpp  face_geom.hpp  facegeom_assembly.hpp  flow.hpp  flow_oracle.hpp  fv_op.hpp  indicators.hpp  leaf_field.hpp  momentum.hpp  momentum_assembly.hpp  multigrid.hpp  pcg.hpp  poisson.hpp  refine.hpp  scalar_transport.hpp  velocity_mg.hpp  vtu_io.hpp
include/peclet/core/common/: mpi.hpp  mpi_stub.hpp  types.hpp  view.hpp
include/peclet/core/decomp/: block_decomposer.hpp  block_indexer.hpp  grid_redistribute.hpp  morton_indexer.hpp
include/peclet/core/field/: field_set.hpp
include/peclet/core/geom/: grid_sdf.hpp  sdf.hpp  vti_io.hpp
include/peclet/core/halo/: grid_halo.hpp  grid_halo_topology.hpp  nbx.hpp  particle_halo.hpp  particle_halo_topology.hpp  particle_migrator.hpp  particle_migrator_device.hpp  particle_migrator_view.hpp  particle_rebalance.hpp
include/peclet/core/interp/: particle_grid.hpp
include/peclet/core/python/: ndarray_interop.hpp
include/peclet/core/solver/: graph_amg.hpp
include/tpx/amr/: adapt.hpp  advect_recon.hpp  barnes_hut.hpp  block_octree.hpp  block_octree_kokkos.hpp  block_octree_view.hpp  cut_cell.hpp  device_assembly.hpp  device_csr.hpp  device_facegeom_assembly.hpp  device_flow.hpp  device_momentum.hpp  device_momentum_assembly.hpp  device_multigrid.hpp  device_pcg.hpp  device_poisson.hpp  device_velocity_mg.hpp  distributed_adapt.hpp  distributed_device.hpp  distributed_fv.hpp  distributed_octree.hpp  distributed_poisson.hpp  face_csr.hpp  face_geom.hpp  flow.hpp  flow_oracle.hpp  fv_op.hpp  indicators.hpp  leaf_field.hpp  momentum.hpp  multigrid.hpp  pcg.hpp  poisson.hpp  refine.hpp  scalar_transport.hpp  velocity_mg.hpp  vtu_io.hpp
include/tpx/common/: mpi.hpp  mpi_stub.hpp  types.hpp  view.hpp
include/tpx/decomp/: block_decomposer.hpp  block_indexer.hpp  morton_indexer.hpp
include/tpx/geom/: grid_sdf.hpp  sdf.hpp  vti_io.hpp
include/tpx/halo/: grid_halo.hpp  grid_halo_cuda.cuh  grid_halo_kokkos.hpp  grid_halo_topology.hpp  nbx.hpp  particle_halo.hpp  particle_halo_kokkos.hpp  particle_halo_topology.hpp  particle_migrator.hpp  particle_migrator_device.hpp  particle_rebalance.hpp
include/tpx/python/: ndarray_interop.hpp
python/: CMakeLists.txt  amr_bindings.cpp  example_amr.py  mpi_bindings.cpp  test_mpi.py  test_tpx_amr.py  test_tpx_mpi.py  tpx_amr.cpp  tpx_amr.pyi  tpx_mpi.cpp
python/packaging/: core_init.py
tests/: CMakeLists.txt  test_amr_adapt.cpp  test_amr_adapt_transport.cpp  test_amr_assembly.cpp  test_amr_barnes_hut.cpp  test_amr_cf_quadratic.cpp  test_amr_cut_cell.cpp  test_amr_device_assembly.cpp  test_amr_device_facegeom.cpp  test_amr_device_flow_kokkos.cpp  test_amr_device_momentum.cpp  test_amr_device_momentum_kokkos.cpp  test_amr_device_multigrid_kokkos.cpp  test_amr_device_openness_kokkos.cpp  test_amr_device_pcg_kokkos.cpp  test_amr_device_poisson_kokkos.cpp  test_amr_distributed_adapt_mpi.cpp  test_amr_distributed_device_mpi.cpp  test_amr_distributed_fv_mpi.cpp  test_amr_distributed_graded_mg_mpi.cpp  test_amr_distributed_mg_mpi.cpp  test_amr_distributed_mpi.cpp  test_amr_distributed_openness_mpi.cpp  test_amr_distributed_poisson_mpi.cpp  test_amr_distributed_rebalance_mpi.cpp  test_amr_distributed_view_mpi.cpp  test_amr_drag.cpp  test_amr_face_field.cpp  test_amr_facegeom.cpp  test_amr_flow.cpp  test_amr_flow_solver.cpp  test_amr_fv_op.cpp  test_amr_fv_openness.cpp  test_amr_kappa_dirichlet.cpp  test_amr_kappa_dirichlet_kokkos.cpp  test_amr_kappa_restrict.cpp  test_amr_kappa_restrict_kokkos.cpp  test_amr_momentum.cpp  test_amr_momentum_assembly.cpp  test_amr_multigrid.cpp  (+33 more)
tests/python/: CMakeLists.txt  interop_test_module.cpp  test_ndarray_interop.py
tools/: cuda_aware_mpi_check.cpp  cudampi-env.sh
