# Python packaging for transport-core's Python surface: the Lagrangian halo (`tpx_mpi`) and the AMR
# octree (`tpx_amr`). transport-core itself is a header-only C++20 library; these are the optional
# nanobind modules under python/ (scikit-build-core points at that subdirectory).
#
# `pip install .` builds them via scikit-build-core. They depend on siblings that are NOT on PyPI:
#   * tpx_mpi needs MPI (and mpi4py at runtime);
#   * tpx_amr additionally needs a Kokkos prefix on CMAKE_PREFIX_PATH and the morton sibling (../../morton)
#     — it is skipped automatically if either is absent.
#
#   CMAKE_PREFIX_PATH=/path/to/extern/install/host-openmp pip install .
#
# This mirrors the developer flow documented in python/CMakeLists.txt; nanobind is added automatically
# as a build requirement.

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "peclet-core"
version = "0.4.0"
description = "peclet.core — shared transport-core infrastructure: Lagrangian particle halo (MPI) + AMR octree"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frank Peters", email = "e.a.j.f.peters@gmail.com" }]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/computational-chemical-engineering/peclet"
Documentation = "https://github.com/computational-chemical-engineering/peclet"
Source = "https://github.com/computational-chemical-engineering/peclet-core"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
# The Python modules live in python/ (a standalone find_package project); the SKBUILD-guarded install
# rules there install mpi (+ amr when morton + Kokkos are present) into peclet/core/.
cmake.source-dir = "python"
wheel.install-dir = "."
# Everything shipped in the wheel is placed by the CMake install() rules (compiled modules + the
# peclet/core/__init__.py); disable scikit-build-core's package auto-discovery so it doesn't also try.
wheel.packages = []
# Note: SuiteNanobind.cmake lives in the umbrella (../../cmake), so `pip install .` resolves it from a
# suite checkout; a standalone sdist of just this repo is not self-contained (by design).
sdist.include = ["include", "python", "CMakeLists.txt", "README.md", "LICENSE"]
